--- a/config/database.yml
+++ b/config/database.yml
@@ -11,17 +11,17 @@ default: &default
 
 development:
   <<: *default
-  database: slackdestep_development
+  database: slack_de_step_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: slackdestep_test
+  database: slack_de_step_test
 
 production:
   <<: *default
-  database: slackdestep_production
+  database: slack_de_step_production
   username: sdk
   password: <%= ENV['SLACKDESTEP_DATABASE_PASSWORD'] %>
