--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,11 @@ jobs:
           RAILS_ENV: test
           DATABASE_URL: "postgres://slackdestep@localhost:5432/slack_de_step_test"
 
+      - image: circleci/postgres:10.3-alpine
+          environment:
+            POSTGRES_USER: postgres
+            POSTGRES_DB: slack_de_step_test
+
     working_directory: ~/slack-de-step
 
     steps:
