--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,17 @@ jobs:
         environment:
           RAILS_ENV: test
           DATABASE_URL: "postgres://postgres@localhost:5432/slack_de_step_test"
+          TZ: "Asia/Tokyo"
 
       - image: circleci/postgres:10.3-alpine
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: slack_de_step_test
+          TZ: "Asia/Tokyo"
 
     working_directory: ~/slack-de-step
+    environment:
+      TZ: "Asia/Tokyo"
 
     steps:
       - checkout
