--- a/app.json
+++ b/app.json
@@ -5,24 +5,24 @@
   "keywords": ["slack", "schedule", "timer"],
   "env": {
     "SALTED_KEY": {
-      "description": "32byteのSALTを記述してください",
-      "value": "c7cbfa4c305aa86134z914che12950b8"
+      "description": "32byteのSALTを記入してください",
+      "value": "1234567890abcdefghijklmnopqurstu"
     },
     "SLACK_CLIENT_ID": {
-      "description": "slackのclient_idを記入してください",
-      "value": "1094413380114.1026551694009"
+      "description": "slackのclient_idを記入してください（slackでアプリを作成している必要があります）",
+      "value": "1111111111111.0000000000000"
     },
     "SLACK_CLIENT_SECRET": {
-      "description": "slackのclient_secretを記入してください",
-      "value": "e6013cf33b5056ls4353f11ffe51f8"
+      "description": "slackのclient_secretを記入してください（slackでアプリを作成している必要があります）",
+      "value": "abcdefghijklmnopqrstuvwxyz123456"
     },
     "AWS_ACCESS_KEY": {
-      "description": "画像はS3にアップされます。AWSのアクセスキーを記入してください",
-      "value": "AKIBVAFLWMM58J0DL70DS"
+      "description": "画像はAWSにアップされます。S3のアクセスキーを記入してください",
+      "value": "AKIAABCDEFGHIJKLMNOP"
     },
     "AWS_SECRET_ACCESS_KEY": {
-      "description": "画像はS3にアップされます。AWSのシークレットキーを記入してください",
-      "value": "E9rOGq14CTCpFQ3=Vv3gwh@1BL0bS0GvelHWSX1f"
+      "description": "画像はAWSにアップされます。S3のシークレットキーを記入してください",
+      "value": "abcDEF789+=-mnoPQU012^/*yzaBCD345][>efgH"
     }
   },
   "addons": [
