--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,12 +39,9 @@ jobs:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
 
       - run:
-          name: Update Chromedriver
-          command: |
-            wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get --only-upgrade install google-chrome-stable
+          name: exec Chromedriver
+          command: chromedriver
+          background: true
 
       - restore_cache:
           keys:
@@ -62,11 +59,16 @@ jobs:
 
       - run:
           name: rubocop
-          command: bundle exec rubocop -c .rubocop.yml -A
+          command: bundle exec rubocop -c .rubocop.yml -a
 
       - run:
           name: db migration
           command: bundle exec rails db:schema:load
+
+      - run:
+        name: Install Japanese font
+        command: |
+          sudo apt-get install fonts-migmix
 
       - run:
           name: System Test
