--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,9 +66,8 @@ jobs:
           command: bundle exec rails db:schema:load
 
       - run:
-        name: Install Japanese font
-        command: |
-          sudo apt-get install fonts-migmix
+          name: Install Japanese font
+          command: sudo apt-get install fonts-migmix
 
       - run:
           name: System Test
