--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,12 @@ jobs:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
 
       - run:
-          name: exec Chromedriver
-          command: chromedriver
-          background: true
+          name: Update Chromedriver
+          command: |
+            wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+            sudo apt-get update
+            sudo apt-get --only-upgrade install google-chrome-stable
 
       - restore_cache:
           keys:
